--- a/secure-logic-programming.cabal
+++ b/secure-logic-programming.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 0438a2795947232f8d2b5cfc11f128f52f7c4aaac2290a1aae667185219398b6
+-- hash: d0f59c0e31effbc8280d86baaf3d99b8a218eb1206d06f1d03a16c5ae5048fd4
 
 name:           secure-logic-programming
 version:        0.1.0.0
@@ -66,6 +66,7 @@ library
     , text
     , uniplate
   default-language: Haskell2010
+  ghc-options: -Wall -Wno-name-shadowing
 
 executable lpsec
   main-is: Main.hs
@@ -103,7 +104,9 @@ test-suite test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      DatalogProgramSpec
       ParserSpec
+      TransformSpec
       Paths_secure_logic_programming
   hs-source-dirs:
       test
@@ -113,8 +116,10 @@ test-suite test
     , HUnit
     , base >=4.7 && <5
     , containers
+    , criterion
     , hashable
     , hspec
+    , hspec-expectations
     , megaparsec
     , mtl
     , optics
