--- a/package.yaml
+++ b/package.yaml
@@ -36,6 +36,7 @@ dependencies:
 - hashable
 - parser-combinators
 - optics
+- prettyprinter
 # Testing only
 # For some reason I get errors in ghcide if these are not in the dependencies
 - hspec
