--- a/secure-logic-programming.cabal
+++ b/secure-logic-programming.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: dd47ebaf878f9403dccbe5d6a5a5118bbaf6fb0d58d3b66a0073a1f1b5dd0225
+-- hash: 940186f32f561476386e9efc5dde678e24e30475d871f78151de3b8504489886
 
 name:           secure-logic-programming
 version:        0.1.0.0
@@ -65,6 +65,7 @@ library
     , strict
     , syb
     , text
+    , union-find
     , uniplate
   default-language: Haskell2010
 
@@ -98,6 +99,7 @@ executable lpsec
     , strict
     , syb
     , text
+    , union-find
     , uniplate
   default-language: Haskell2010
 
@@ -135,5 +137,6 @@ test-suite test
     , strict
     , syb
     , text
+    , union-find
     , uniplate
   default-language: Haskell2010
