Finished changing Expr

--- a/secure-logic-programming.cabal
+++ b/secure-logic-programming.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3ff80ec714b67362fee1cf9737dfc84dea89c80d41f8e66f82be706aa31ab572
+-- hash: e9491b9b98036f2297203b73df81af7d0561fae3367931604b32c29342e5e6c6
 
 name:           secure-logic-programming
 version:        0.1.0.0
@@ -28,6 +28,7 @@ source-repository head
 library
   exposed-modules:
       DatalogProgram
+      DBClause
       ErrorMsg
       Expr
       Language.SecreC
