--- a/secure-logic-programming.cabal
+++ b/secure-logic-programming.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: d9fcdb516397e93f219b73766374ffa8813881b70ddca64b0aa02cddd7287777
+-- hash: f221f9dbdf8f33798a3fee95fd7bb2a31f55dd04d8404aa000bc98aee2632c8b
 
 name:           secure-logic-programming
 version:        0.1.0.0
@@ -65,6 +65,7 @@ library
     , semigroups
     , split
     , text
+    , transformers
     , union-find
     , uniplate
   default-language: Haskell2010
@@ -95,6 +96,7 @@ executable lpsec
     , semigroups
     , split
     , text
+    , transformers
     , union-find
     , uniplate
   default-language: Haskell2010
@@ -129,6 +131,7 @@ test-suite test
     , semigroups
     , split
     , text
+    , transformers
     , union-find
     , uniplate
   default-language: Haskell2010
