Added ppdatalog testing

--- a/secure-logic-programming.cabal
+++ b/secure-logic-programming.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e7005741b4d4c3a713b98b4cdb94731b3676de99930e87c6cb838a371c825db1
+-- hash: 79f030899c0e772544946286c54d65e5fd116d7767a15c428fae9cfb3cc10471
 
 name:           secure-logic-programming
 version:        0.1.0.0
@@ -39,12 +39,13 @@ library
       Parser.DatalogParser
       Parser.DatalogParser.Expr
       Parser.DatalogParser.Lexer
+      PostProcessing
       RGGraph
       Rule
       Substitution
       Table
       Transform
-      TypeChecker
+      TypeInference
   other-modules:
       Paths_secure_logic_programming
   hs-source-dirs:
@@ -109,6 +110,7 @@ test-suite test
   main-is: Spec.hs
   other-modules:
       ParserSpec
+      PostProcessingSpec
       SubstSpec
       Swipl
       TransformSpec
