--- a/secure-logic-programming.cabal
+++ b/secure-logic-programming.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: faa52949ac60d6be4033b51bf92f74d3f53f6bf84c320b9ede9756fde6bf99aa
+-- hash: 1396f94fc66007183d49e487dbd7944f48f3b29880834f43d76f8fc57e203703
 
 name:           secure-logic-programming
 version:        0.1.0.0
@@ -42,6 +42,7 @@ library
       Parser.DatalogParser.Expr
       Parser.DatalogParser.Lexer
       PostProcessing
+      PreProcessing
       Rule
       Semantics
       Substitution
