--- a/secure-logic-programming.cabal
+++ b/secure-logic-programming.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 7769e22735865633c054ef353f5239f95f99f31f583658a11102914b3d7e68c2
+-- hash: 8d5140d4b97f4fa721189de0453e35a420bf2071f4163fcb62ed9cfe6fe72f05
 
 name:           secure-logic-programming
 version:        0.1.0.0
@@ -58,6 +58,7 @@ library
     , containers
     , hslogger
     , hspec
+    , hspec-expectations
     , lens
     , megaparsec
     , mtl
@@ -88,6 +89,7 @@ executable lpsec
     , containers
     , hslogger
     , hspec
+    , hspec-expectations
     , lens
     , megaparsec
     , mtl
