--- a/secure-logic-programming.cabal
+++ b/secure-logic-programming.cabal
@@ -43,6 +43,8 @@ library
       PostProcessing
       PreProcessing
       Rule
+      Simplify
+      Solve
       Substitution
       Table
       Transform
@@ -67,6 +69,7 @@ library
     , prettyprinter
     , semigroups
     , shelly
+    , simple-smt
     , split
     , text
     , transformers
@@ -99,6 +102,7 @@ executable lpsec
     , secure-logic-programming
     , semigroups
     , shelly
+    , simple-smt
     , split
     , text
     , transformers
@@ -140,6 +144,7 @@ test-suite test
     , secure-logic-programming
     , semigroups
     , shelly
+    , simple-smt
     , split
     , text
     , transformers
