--- a/stack.yaml
+++ b/stack.yaml
@@ -42,6 +42,7 @@ packages:
 extra-deps:
 - haskell-lsp-0.19.0.0@sha256:03a1a05fbdea9376cb1edec358866dc5781925badc3f4b5029ccf4174e765efd,5271
 - haskell-lsp-types-0.19.0.0@sha256:b8b462948f506226f324e0e56010cc9b47df90ec9ebad3b18caa9390d5427287,2941
+- simple-smt-0.9.4@sha256:93746e0c4bade39c9848549103de5b65b169f1faa5b76c7b9bcde2031f31c58f,775
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
