--- a/secure-logic-programming.cabal
+++ b/secure-logic-programming.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 6277ab08ecaa36e2b32fde6b678f431575c54fbfbe98986ce740346e2cd27bce
+-- hash: a2af3a08c6a64e40df2ce1e78efde0828c869e317fd7911afe24407f18051843
 
 name:           secure-logic-programming
 version:        0.1.0.0
@@ -65,6 +65,7 @@ library
     , hspec
     , hspec-expectations
     , lens
+    , listsafe
     , megaparsec
     , mtl
     , optparse-applicative
@@ -96,6 +97,7 @@ executable lpsec
     , hspec
     , hspec-expectations
     , lens
+    , listsafe
     , megaparsec
     , mtl
     , optparse-applicative
@@ -137,6 +139,7 @@ test-suite test
     , hspec
     , hspec-expectations
     , lens
+    , listsafe
     , megaparsec
     , mtl
     , optparse-applicative
