Added hash-based search condition that suits all search strategies. Moved "Simplify" from "Postprocess" into "Transform" since it is useful there.

--- a/secure-logic-programming.cabal
+++ b/secure-logic-programming.cabal
@@ -65,6 +65,7 @@ library
       HUnit
     , base >=4.7 && <5
     , containers
+    , hashable
     , hspec
     , hspec-expectations
     , lens
@@ -97,6 +98,7 @@ executable lpsec
       HUnit
     , base >=4.7 && <5
     , containers
+    , hashable
     , hspec
     , hspec-expectations
     , lens
@@ -139,6 +141,7 @@ test-suite test
     , base >=4.7 && <5
     , containers
     , criterion
+    , hashable
     , hspec
     , hspec-expectations
     , lens
