--- a/secure-logic-programming.cabal
+++ b/secure-logic-programming.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 5b55ea8670de8d790fc9d81f988ba1327684f37e18020b772d17882e92766180
+-- hash: c02bd9ae5ef367459352f533b41b59a2c2638fa38d2171b15b3fb35ff52033dd
 
 name:           secure-logic-programming
 version:        0.1.0.0
@@ -60,7 +60,7 @@ library
       Paths_secure_logic_programming
   hs-source-dirs:
       src
-  ghc-options: -Wall
+  ghc-options: -Wall -XNoImplicitPrelude -XOverloadedStrings
   build-depends:
       HUnit
     , base >=4.7 && <5
@@ -74,6 +74,7 @@ library
     , optparse-applicative
     , parser-combinators
     , prettyprinter
+    , relude
     , semigroups
     , shelly
     , simple-smt
@@ -92,7 +93,7 @@ executable lpsec
       Paths_secure_logic_programming
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
+  ghc-options: -Wall -XNoImplicitPrelude -XOverloadedStrings -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit
     , base >=4.7 && <5
@@ -106,6 +107,7 @@ executable lpsec
     , optparse-applicative
     , parser-combinators
     , prettyprinter
+    , relude
     , secure-logic-programming
     , semigroups
     , shelly
@@ -133,7 +135,7 @@ test-suite test
       Paths_secure_logic_programming
   hs-source-dirs:
       test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
+  ghc-options: -Wall -XNoImplicitPrelude -XOverloadedStrings -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit
     , base >=4.7 && <5
@@ -147,6 +149,7 @@ test-suite test
     , optparse-applicative
     , parser-combinators
     , prettyprinter
+    , relude
     , secure-logic-programming
     , semigroups
     , shelly
