--- a/secure-logic-programming.cabal
+++ b/secure-logic-programming.cabal
@@ -65,6 +65,7 @@ library
       HUnit
     , base >=4.7 && <5
     , containers
+    , hashable
     , hspec
     , hspec-expectations
     , lens
@@ -97,6 +98,7 @@ executable lpsec
       HUnit
     , base >=4.7 && <5
     , containers
+    , hashable
     , hspec
     , hspec-expectations
     , lens
@@ -138,6 +140,7 @@ test-suite test
       HUnit
     , base >=4.7 && <5
     , containers
+    , hashable
     , hspec
     , hspec-expectations
     , lens
