--- a/secure-logic-programming.cabal
+++ b/secure-logic-programming.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 0f8573ff77c0ca8e276186c87b62e6d499083be17ded5d446039a401326d5ba0
+-- hash: 0e476df8a765130b27d9970920f39e4b9d5ee417e3181ebaf6b08c6603ca4442
 
 name:           secure-logic-programming
 version:        0.1.0.0
@@ -48,6 +48,7 @@ library
       Table
       Translator
       Translator.Adornment
+      Translator.Distribute
       Translator.MagicSets
       Translator.PKTransform
       Translator.PostProcessing
