--- a/package.yaml
+++ b/package.yaml
@@ -60,6 +60,15 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - secure-logic-programming
+  lpsec-gen-tables:
+    main: Main.hs
+    source-dirs: table-gen
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - secure-logic-programming
 
 tests:
   test:
